[tool.poetry]
name = "pyfinassets"
version = "0.1.0"
description = ""
authors = ["agalsty&outlook.fr <agalsty&outlook.fr>"]
license = "Apache Licence 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
